# vices

./: CMakeLists.txt  LICENSE.txt  README.md  main.cpp  requirements.txt
dep/: libstatgen.cmake
src/: Report.cpp  Report.h  SampleData.cpp  SampleData.h  VicesArgs.cpp  VicesArgs.h  readReports.cpp  readReports.h  regression.cpp  regression.h
